# Nova

./: Cargo.toml  compressed_snark.json
benches/: compressed-snark.rs  compute-digest.rs  ppsnark.rs  recursive-snark.rs  sha256.rs
examples/: and.rs  hashchain.rs  minroot.rs
src/: circuit.rs  digest.rs  lib.rs  nifs.rs
src/frontend/: mod.rs  test_shape_cs.rs
src/frontend/gadgets/: num.rs
src/frontend/util_cs/: test_cs.rs
src/gadgets/: ecc.rs
src/gadgets/nonnative/: bignat.rs
src/nova/: mod.rs
src/provider/: bn256_grumpkin.rs  hyperkzg.rs  ipa_pc.rs  keccak.rs  mod.rs  msm.rs  msm_fast.rs  pasta.rs  pasta_curves.rs  pedersen.rs  secp_secq.rs  traits.rs
src/provider/poseidon/: hash_type.rs  mod.rs  round_constants.rs  round_numbers.rs
src/r1cs/: mod.rs  sparse.rs
src/spartan/: direct.rs  macros.rs  mod.rs  ppsnark.rs  snark.rs  sumcheck.rs
src/spartan/polys/: eq.rs  masked_eq.rs  multilinear.rs  univariate.rs
src/traits/: circuit.rs  snark.rs
