[package]
name = "nova-snark"
version = "0.38.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2021"
description = "High-speed recursive arguments from folding schemes"
documentation = "https://docs.rs/nova-snark/"
readme = "README.md"
repository = "https://github.com/Microsoft/Nova"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]
rust-version = "1.79.0"

[dependencies]
ff = { version = "0.13.0", features = ["derive"], default-features = false }
digest = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
subtle = { version = "2.6.1", default-features = false }
pasta_curves = { version = "0.5", features = [
    "repr-c",
    "serde",
], default-features = false }
generic-array = { version = "1.1", default-features = false }
num-bigint = { version = "0.4.6", features = [
    "serde",
    "rand",
], default-features = false }
num-traits = { version = "0.2.19", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
serde = { version = "1.0.216", features = ["derive"], default-features = false }
bitvec = { version = "1.0", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
thiserror = { version = "2.0", default-features = false }
group = { version = "0.13.0", default-features = false }
itertools = { version = "0.13.0", default-features = false }
hashbrown = { version = "0.15.2", features = [
    "alloc",
], default-features = false }

# ! No_std vs Std
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
bincode = { version = "1.3", optional = true, default-features = false }


# ! TODO -> Fix this -> rayon, halo2curves, bincode, once_cell !!!
# rayon = "1.10"
halo2curves = { version = "0.6.0", features = ["bits", "derive_serde"] }
# once_cell = { version = "1.18.0", default-features = false }
# once_cell = "1.18.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
flate2 = "1.0.35"
hex = "0.4.3"
pprof2 = { version = "0.13" }
cfg-if = "1.0.0"
sha2 = "0.10.7"
proptest = "1.6.0"
rand = "0.8.5"
expect-test = "1.5.0"

[[bench]]
name = "recursive-snark"
harness = false

[[bench]]
name = "compressed-snark"
harness = false

[[bench]]
name = "compute-digest"
harness = false

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "ppsnark"
harness = false

[features]
default = ["std"]
std = ["bincode"]
flamegraph = ["pprof2/flamegraph", "pprof2/criterion"]
